objects/Part_Customer_Infomation__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Part Customer Infomations</relationshipLabel>
        <relationshipName>Part_Customer_Infomations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acknowledged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Of_Life__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End Of Life</label>
        <referenceTo>PCN_EOL__c</referenceTo>
        <relationshipLabel>Part Customer Infomations</relationshipLabel>
        <relationshipName>Part_Customer_Infomations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IBM_Part_Number__c</fullName>
        <label>Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Select_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipment_Line_Internal__c</fullName>
        <label>Shipment Line Internal</label>
        <referenceTo>Shipment_Line_Internal__c</referenceTo>
        <relationshipLabel>Part Customer Infomations</relationshipLabel>
        <relationshipName>Part_Customer_Infomations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Shipment_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment Line</label>
        <referenceTo>Shipment_Line__c</referenceTo>
        <relationshipLabel>Part Customer Infomations</relationshipLabel>
        <relationshipName>Part_Customer_Infomations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ultimate_Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ultimate Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Part Customer Infomations (Ultimate Customer Account)</relationshipLabel>
        <relationshipName>Part_Customer_Infomations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ultimate_Customer_Select_Checbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ultimate Customer Select Checbox</label>
        <type>Checkbox</type>
    </fields>
    <label>Part Customer Infomation</label>
    <nameField>
        <displayFormat>PCN-{00000}</displayFormat>
        <label>Part Customer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Part Customer Infomations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>